refined code and styling

--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -1,8 +1,8 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
+<a href="/dashboard" class="back-btn"> &larr; Back to dashboard</a>
 
-<article class="new-page">
+<article class="page-style">
     <section class="new-form-page">
-        <div class="form-heading">
+        <div class="form-title">
             <h2>Create New Blog Post</h2>
         </div>
         <div class="form-section">
