--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,4 +1,4 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
+<a href="/dashboard" class="back-btn"> &larr; Back to dashboard</a>
 <br>
 <br>
 
