--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+:root {
+    --primary: #b2c59b;
+    --secondary: #2d2408;
+}
 * {
     box-sizing: border-box;
 }
@@ -8,23 +12,23 @@ html {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
-    color: #333;
+    color: #2f2e2e;
 }
 
 main,
-.site-name {
-    background-color: #b8cba2;
+.title {
+    background-color: var(--primary);
 }
 
 a,
-.btn-no-style,
+.button-style,
 #comment-subtitle {
-    color: #b8cba2;
+    color: var(--primary);
 }
 
 a:hover,
-.btn-no-style:hover {
-    color: #e2edd5;
+.button-style:hover {
+    color: #e1ecd4;
 }
 
 a {
@@ -35,7 +39,7 @@ a {
 }
 
 button {
-    background-color: #225ca3;
+    background-color: #215ba3;
     border: 0;
     padding: 1%;
     color: white;
@@ -46,17 +50,17 @@ button {
 }
 
 button:hover {
-    background-color: #3486eb;
+    background-color: #3184ea;
 }
 
-.post-list {
+.list {
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
 
-.go-back {
-    color: #2c2307;
+.back-btn {
+    color: var(--secondary);
 }
 
 textarea,
@@ -69,7 +73,7 @@ input {
 textarea:focus,
 input:focus {
     outline: none;
-    border: 1px solid #3486eb;
+    border: 1px solid #3083e9;
 }
 
 textarea {
@@ -85,7 +89,7 @@ form label {
     display: block;
 }
 
-.wrapper {
+.container {
     width: 100%;
     min-height: 100%;
     font-size: 1.2em;
@@ -101,10 +105,10 @@ form label {
 }
 
 header,
-.site-row,
+.title-block,
 .info-section,
-.form-heading {
-    background-color: #2c2307;
+.form-title {
+    background-color: var(--secondary);
 }
 
 .login-page,
@@ -115,7 +119,7 @@ header,
     padding-bottom: 10px;
 }
 
-.form-heading {
+.form-title {
     padding: 10px;
 }
 
@@ -128,7 +132,7 @@ header,
 }
 
 .post-name,
-.post-title-section, .new-page {
+.post-title-section, .page-style {
     padding-top: 10px;
 }
 
@@ -143,13 +147,13 @@ header h1 {
     font-size: 1em;
 }
 
-.site-row {
+.title-block {
     display: flex;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #cac9c9;
     justify-content: center;
 }
 
-.site-name {
+.title {
     margin-bottom: 10px;
     padding: 0px 10px;
     border-style: double;
@@ -160,7 +164,7 @@ main {
     padding: 5% 10%;
 }
 
-.btn-no-style {
+.button-style {
     background: none;
     border: none;
     padding: 0;
@@ -172,16 +176,16 @@ main {
     margin-left: 16px;
 }
 
-.btn-no-style:hover {
+.button-style:hover {
     background: none;
 }
 
 .delete-post-btn {
-    background-color: #d41414;
+    background-color: #d31212;
 }
 
 .delete-post-btn:hover {
-    background-color: #ff643d;
+    background-color: #fa5e37;
 }
 
 .post {
@@ -193,13 +197,13 @@ main {
 .post .title span {
     font-style: italic;
     font-size: 90%;
-    color: #7d7d7d;
+    color: #7a7979;
 }
 
 .edit-link {
     display: block;
     margin: -1.5% 0 2% 0;
-    color: #2c2307;
+    color: var(--secondary);
 }
 
 .comment-form {
@@ -212,7 +216,7 @@ main {
 }
 
 .comment:nth-child(odd) {
-    background-color: #fff5eb;
+    background-color: #f7ede3;
 }
 
 .comment .meta {
@@ -249,12 +253,12 @@ main {
 
 .sign-in-link,
 .login-link {
-    color: #2c2307;
+    color: var(--secondary);
 }
 
-.form-heading h1,
-.form-heading h2 {
-    color: #b8cba2;
+.form-title h1,
+.form-title h2 {
+    color: var(--primary);
 }
 
 .login-form,
