--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,8 +1,8 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
+<a href="/dashboard" class="back-btn"> &larr; Back to dashboard</a>
 
-<article class="new-page">
+<article class="page-style">
     <section class="edit-form-page">
-        <div class="form-heading">
+        <div class="form-title">
             <h2>
                 Edit Post
             </h2>
