--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <section class="login-page">
-    <div class="form-heading">
+    <div class="form-title">
         <h1>Log In</h1>
     </div>
     <div class="form-section">
@@ -13,12 +13,12 @@
                 <input type="password" class="entry-field" id="password-login" />
             </div>
             <div>
-                <button type="submit" class="login-signup-btn">Log In!</button>
+                <button type="submit" class="login-signup-btn">Log In</button>
             </div>
         </form>
     </div>
 
-    <a href="/signup" class="sign-in-link">sign up instead</a>
+    <a href="/signup" class="sign-in-link">Sign Up instead</a>
 </section>
 
 <script src="/js/login.js"></script>
