--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <section class="sign-in-page">
-    <div class="form-heading">
+    <div class="form-title">
         <h1>Sign Up</h1>
     </div>
     <div class="form-section">
@@ -9,11 +9,11 @@
                 <input type="text" class="entry-field" id="username-signup" />
             </div>
             <div>
-                <label for="password-signup">Enter a password</label>
+                <label for="password-signup">Enter a Password</label>
                 <input type="password" class="entry-field" id="password-signup" />
             </div>
             <div>
-                <button type="submit" class="login-signup-btn">Sign Up!</button>
+                <button type="submit" class="login-signup-btn">Sign Up</button>
             </div>
         </form>
     </div>
