color variable change

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: #b2c59b;
-    --secondary: #2d2408;
+    --primary: #e1f2f6;
+    --secondary: #000000;
 }
 * {
     box-sizing: border-box;
